# gaia-papers

./: .gitignore  README.md
formalized/2411-17538-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2411-17538-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2411-17538-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
formalized/2411-17538-gaia/src/2411_17538/: __init__.py  motivation.py  priors.py  s2_whitening.py  s3_apparatus.py  s4_results.py  s5_conclusion.py  s6_appendix.py
formalized/2501-00663-titans-gaia/: .gitignore  ANALYSIS.md  pyproject.toml  references.json
formalized/2501-00663-titans-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2501-00663-titans-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
formalized/2501-00663-titans-gaia/src/2501_00663_titans/: __init__.py  motivation.py  priors.py  s3_neural_memory.py  s4_architecture.py  s5_experiments.py
formalized/2502-06533-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2502-06533-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2502-06533-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
formalized/2502-06533-gaia/artifacts/: 2502.06533.txt
formalized/2502-06533-gaia/src/2502_06533/: __init__.py  motivation.py  priors.py  s3_critical_tokens.py  s4_method.py  s5_results.py  (+1 more)
formalized/2504-07912-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2504-07912-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2506-10947-spurious-rewards-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2506-10947-spurious-rewards-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2507-23773-gaia/: ANALYSIS.md  README.md  pyproject.toml  references.json
formalized/2507-23773-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2509-07430-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2509-07430-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2510-00615-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2510-00615-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2510-17109-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2510-17109-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2510-20817-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2510-20817-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2511-09030-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2511-09030-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2511-15137-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2511-15137-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2511-15137-gaia/artifacts/: 2511.15137.txt
formalized/2512-07631-acp-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2512-07631-acp-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2512-20111-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2512-20111-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2512-20578-gaia/: ANALYSIS.md  priors.py  pyproject.toml  references.json
formalized/2512-20578-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2512-20578-gaia/artifacts/: source.txt
formalized/2512-21720-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2512-21720-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2512-21720-gaia/artifacts/: source.txt
formalized/2601-04748-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2601-04748-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2601-04748-gaia/artifacts/: source.txt
formalized/2601-08129-gaia/: .gitignore  ANALYSIS.md  README.md  pyproject.toml  references.json
formalized/2601-08129-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2601-12030-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2601-12030-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2601-15808-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2601-15808-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2601-15808-gaia/artifacts/: source.txt
formalized/2601-21557-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2601-21557-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2602-00994-gaia/: ANALYSIS.md  README.md  pyproject.toml  references.json
formalized/2602-00994-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2602-00994-leas-dart-reasoning-and-tool-use-compet-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2602-00994-leas-dart-reasoning-and-tool-use-compet-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2602-06029-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2602-06029-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2602-07885-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2602-07885-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2602-21204-gaia/: ANALYSIS.md  README.md  pyproject.toml  references.json
formalized/2602-21204-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2603-08462-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2603-08462-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2603-08660-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2603-08660-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2603-08660-gaia/artifacts/: 2603.08660.txt
formalized/2603-14312-gaia/: ANALYSIS.md  pyproject.toml  references.json
formalized/2603-14312-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
formalized/2603-14312-gaia/artifacts/: source.txt
sft-vs-mixed-policy-gaia/: pyproject.toml
sft-vs-mixed-policy-gaia/src/sft_vs_mixed_policy/: __init__.py
(+1218 files in other folders)
