[project]
name = "sft-vs-mixed-policy-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "riso", email = "ruoxue@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/sft_vs_mixed_policy"]

[tool.gaia]
type = "knowledge-package"
uuid = "554c2870-732f-4bbf-b315-0b088be7ce08"
