[project]
name = "2411-17538-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2411_17538"]

[tool.gaia]
type = "knowledge-package"
uuid = "5db86b1b-86d1-43a8-bbdd-3decfd2431ce"
