[project]
name = "2501-00663-titans-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2501_00663_titans"]

[tool.gaia]
type = "knowledge-package"
uuid = "51375e1a-2b63-4a3b-adf3-ce6c23d03527"
