[project]
name = "2502-06533-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2502_06533"]

[tool.gaia]
type = "knowledge-package"
uuid = "d7ae5227-11af-41df-9cef-b508c739ef0f"
