[project]
name = "2504-07912-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2504_07912"]

[tool.gaia]
type = "knowledge-package"
uuid = "affed5b2-da2b-4725-b838-910486294d67"
