[project]
name = "2506-10947-spurious-rewards-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2506_10947_spurious_rewards"]

[tool.gaia]
type = "knowledge-package"
uuid = "87e73d87-2bbf-454f-a983-66c972973d2c"
