[project]
name = "2507-23773-gaia"
version = "0.1.0"
description = "Gaia formalization of Deng et al. (2025) 'SIMURA: A World-Model-Driven Simulative Reasoning Architecture for General Goal-Oriented Agents'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2507_23773"]

[tool.gaia]
type = "knowledge-package"
uuid = "9b8b0c26-8e9f-404d-b062-fe7ed518cb1c"
