[project]
name = "2509-07430-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2509_07430"]

[tool.gaia]
type = "knowledge-package"
uuid = "81817f47-f878-490a-bb60-672ea718a742"
