[project]
name = "2510-00615-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2510_00615"]

[tool.gaia]
type = "knowledge-package"
uuid = "913549ef-e587-4e38-b79e-9271947db120"
