[project]
name = "2510-17109-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2510_17109"]

[tool.gaia]
type = "knowledge-package"
uuid = "58229f1e-dca4-4da2-b9d9-7c8330247c15"
