[project]
name = "2510-20817-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2510_20817"]

[tool.gaia]
type = "knowledge-package"
uuid = "22ecb8ac-d5c1-4be2-b803-fcfc83444e00"
