[project]
name = "2511-09030-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2511_09030"]

[tool.gaia]
type = "knowledge-package"
uuid = "a3c990cd-2458-4df7-9395-88fff3c3a71e"
