[project]
name = "2511-15137-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2511_15137"]

[tool.gaia]
type = "knowledge-package"
uuid = "4dfb6f9a-59de-4328-904c-4b721aa285b4"
