[project]
name = "2512-07631-acp-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2512_07631_acp"]

[tool.gaia]
type = "knowledge-package"
uuid = "47b382c8-ed3c-4793-98bc-083df835ddeb"
