[project]
name = "2512-20111-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2512_20111"]

[tool.gaia]
type = "knowledge-package"
uuid = "25e37770-bc04-418f-bc48-5b5f12882309"
