[project]
name = "2512-20578-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2512_20578"]

[tool.gaia]
type = "knowledge-package"
uuid = "0a4c6458-bc0d-4d94-9a8b-1c96bbdcf3fc"
