[project]
name = "2512-21720-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2512_21720"]

[tool.gaia]
type = "knowledge-package"
uuid = "0501c32b-bfab-4b1e-9913-e38ff6ca9bc8"
