[project]
name = "2601-04748-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2601_04748"]

[tool.gaia]
type = "knowledge-package"
uuid = "f34e222a-ef0c-464b-8020-d63dc401daaa"
