[project]
name = "2601-08129-gaia"
version = "0.1.0"
description = "Gaia formalization of Rodriguez (2026) 'Emergent Coordination in Multi-Agent Systems via Pressure Fields and Temporal Decay'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2601_08129"]

[tool.gaia]
type = "knowledge-package"
uuid = "b99a2929-2eab-486f-9c1b-a6cd2762cd6d"
