[project]
name = "2601-12030-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2601_12030"]

[tool.gaia]
type = "knowledge-package"
uuid = "9a6a7046-4524-4470-a5dd-1acb67da7ecf"
