[project]
name = "2601-15808-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2601_15808"]

[tool.gaia]
type = "knowledge-package"
uuid = "d6b8accb-1ec3-4844-88dd-0d770a154d18"
