[project]
name = "2601-21557-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2601_21557"]

[tool.gaia]
type = "knowledge-package"
uuid = "9cde955e-3271-4b92-8f01-24f87b8176c9"
