[project]
name = "2602-00994-gaia"
version = "0.1.0"
description = "Gaia formalization of Li et al. 2026 (arXiv:2602.00994): Reasoning and Tool-use Compete in Agentic RL -- LEAS diagnostic and DART training-time disentanglement."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_00994"]

[tool.gaia]
type = "knowledge-package"
uuid = "79db3e54-8caf-4c6e-b30b-380e73294b7d"
