[project]
name = "2602-00994-leas-dart-reasoning-and-tool-use-compet-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_00994_leas_dart_reasoning_and_tool_use_compet"]

[tool.gaia]
type = "knowledge-package"
uuid = "49de93e3-7b67-4293-8502-40ba43122edf"
