[project]
name = "2602-06029-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_06029"]

[tool.gaia]
type = "knowledge-package"
uuid = "421ca9b2-e121-4e85-8d36-7d25adb0c77e"
