[project]
name = "2602-07885-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_07885"]

[tool.gaia]
type = "knowledge-package"
uuid = "dbd91dd2-8aaf-423a-be63-b9f875faa8ed"
