[project]
name = "2602-21204-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_21204"]

[tool.gaia]
type = "knowledge-package"
uuid = "a5431dbf-2ac5-45a1-9152-3568d55bf0c4"
