[project]
name = "2602-21204-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2602_21204"]

[tool.gaia]
type = "knowledge-package"
uuid = "65cf4ed1-c2d2-43f8-aa05-eaa04b338cd6"
