[project]
name = "2603-08462-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2603_08462"]

[tool.gaia]
type = "knowledge-package"
uuid = "0f2711a9-bc7c-4eec-af1a-3e0c1637ec9b"
