[project]
name = "2603-08660-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2603_08660"]

[tool.gaia]
type = "knowledge-package"
uuid = "6a13da34-4bce-43c7-be03-77900ae070d4"
