[project]
name = "2603-14312-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/2603_14312"]

[tool.gaia]
type = "knowledge-package"
uuid = "583d0d43-4fd3-4518-a60e-e50de5d07e00"
